# AnimEngineV2

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: MCP.md
examples/: bounce.aep2  make_bounce.py  make_windmill.py  windmill.aep2
src/animengine/: __init__.py
src/animengine/api/: __init__.py  project.py  sessions.py
src/animengine/audio/: __init__.py  loader.py  mixing.py
src/animengine/core/: __init__.py  commands.py  document.py  geometry.py  layers.py  raster.py  scene.py
src/animengine/io/: __init__.py  export.py  legacy_ae.py  native.py  serialize.py
src/animengine/io/importers/: __init__.py  lottie.py  raster_seq.py  svg.py
src/animengine/mcp/: __init__.py  server.py
src/animengine/render/: __init__.py  renderer.py
src/animengine/ui/: __init__.py  app.py  canvas.py  icons.py  panels.py  state.py  timeline.py  tools.py
tests/: conftest.py  test_api.py  test_export.py  test_geometry.py  test_importers.py  test_io.py  test_layers_document.py  test_mcp_server.py  test_overlap_drag.py  test_perf.py  test_renderer.py  test_scene.py  test_ui.py
