[project]
name = "animengine"
version = "2.0.0"
description = "AnimEngine 2 - modern keyframe vector/raster animation editor with programmatic and MCP access"
readme = "README.md"
authors = [
    { name = "Ignacy Daszkiewicz", email = "ignacy.daszkiewicz@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.28.1",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
    "pyside6>=6.11.1",
]

[project.scripts]
animengine = "animengine.ui.app:main"
animengine-mcp = "animengine.mcp.server:main"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
